deploy-cepanel/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ce-panel
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/server-alias: ce-panel-dev.canaryis.com
spec:
  rules:
    - host: "ce-panel-k8s-dev.canaryis.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: ce-panel
              servicePort: node
  tls:
    - hosts:
        - ce-panel-k8s-dev.canaryis.com
      secretName: star-canaryis-com-cert
